WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126788
CTTE in NavigationScheduler
https://bugs.webkit.org/show_bug.cgi?id=126788
Summary
CTTE in NavigationScheduler
Anders Carlsson
Reported
2014-01-10 16:15:11 PST
CTTE in NavigationScheduler
Attachments
Patch
(28.82 KB, patch)
2014-01-10 16:18 PST
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-01-10 16:18:53 PST
Created
attachment 220901
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-10 16:21:18 PST
Attachment 220901
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/inspector/InspectorInstrumentation.cpp', u'Source/WebCore/inspector/InspectorInstrumentation.h', u'Source/WebCore/inspector/InspectorPageAgent.cpp', u'Source/WebCore/inspector/InspectorPageAgent.h', u'Source/WebCore/loader/NavigationScheduler.cpp', u'Source/WebCore/loader/NavigationScheduler.h', u'Source/WebCore/page/Frame.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/page/Frame.cpp:167: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-01-10 16:34:11 PST
Committed
r161697
: <
http://trac.webkit.org/changeset/161697
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug